# sce-issue

./: LICENSE  README.md  sce-issue.cabal  stack.yaml
src/: Lib.hs
test/: Spec.hs
