name:                sce-issue
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tneisinger/sce-issue#readme
license:             BSD3
license-file:        LICENSE
author:              Tyler Neisinger
maintainer:          tjneisi@gmail.com
copyright:           Copyright: (c) 2019 Tyler Neisinger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-types
                     , servant-server
                     , servant-checked-exceptions
                     , wai
                     , warp
  default-language:    Haskell2010

executable sce-issue-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sce-issue
  default-language:    Haskell2010

test-suite sce-issue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sce-issue
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , servant
                     , servant-server
                     , servant-quickcheck
                     , servant-checked-exceptions
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tneisinger/sce-issue
